fill profile screen with data and images functional

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,9 +49,9 @@
 
                     <LinearLayout
                         android:id="@+id/infoCollapsed"
-                        android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="?android:attr/actionBarSize"
+                        android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
@@ -62,7 +62,6 @@
                             android:includeFontPadding="false"
                             android:maxLines="1"
                             android:singleLine="true"
-                            android:text="@{viewModel.userEmail}"
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
                             tools:text="Site name" />
@@ -72,13 +71,10 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/infoExpanded"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="16dp">
+                    android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/overview_image_cover"
+                        android:id="@+id/image_cover"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:background="@color/colorPrimary"
@@ -88,104 +84,66 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:loadImageUrlWithoutPlaceholder="@{viewModel.userCover}"
                         tools:background="@color/design_default_color_secondary" />
 
                     <ImageView
-                        android:id="@+id/icon_change_cover"
+                        android:id="@+id/img_change_cover"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="6dp"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:padding="10dp"
                         android:src="@drawable/svg_photo_camera"
-                        app:layout_constraintBottom_toBottomOf="@+id/overview_image_cover"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintBottom_toBottomOf="@+id/image_cover"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:ignore="ContentDescription" />
 
-                 <!--   <TextView
+                    <TextView
+                        android:id="@+id/tv_profile"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="40dp"
+                        android:layout_marginBottom="8dp"
+                        android:includeFontPadding="false"
+                        android:maxLines="1"
+                        android:singleLine="true"
                         android:text="@string/profile"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/large_text_size" />-->
-
-
-                    <TextView
-                        android:id="@+id/subtitleExpanded"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:includeFontPadding="false"
-                        android:maxLines="1"
-                        android:paddingBottom="8dp"
-                        android:singleLine="true"
-                        android:text="@{viewModel.userEmail}"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/titleExpanded"
-                        tools:text="SubTitle"
-                        tools:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/titleExpanded"
-                        android:layout_width="wrap_content"
-                        android:layout_height="28dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:includeFontPadding="false"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:text="@{viewModel.userName}"
-                        android:textColor="@android:color/black"
-                        android:textSize="24sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/avatarExpanded"
-                        tools:text="Title" />
-
-                    <TextView
-                        android:id="@+id/contactRequestsExpanded"
-                        android:layout_width="wrap_content"
-                        android:layout_height="28dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:includeFontPadding="false"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:text="contacts_request"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/medium_text_size"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/subtitleExpanded"
-                        tools:text="contact Requests" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
+                        tools:text="@string/profile" />
 
-                    <ImageView
-                        android:id="@+id/avatarExpanded"
+                    <com.android.template.utils.custom.RoundedImageView
+                        android:id="@+id/img_avatar"
                         android:layout_width="158dp"
                         android:layout_height="158dp"
-                        app:circleImageWithBorder="@{viewModel.userAvatar}"
-                        app:layout_constraintBottom_toBottomOf="@+id/overview_image_cover"
+                        app:layout_constraintBottom_toBottomOf="@+id/image_cover"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/overview_image_cover"
-                        tools:background="@color/design_default_color_primary" />
+                        app:layout_constraintTop_toBottomOf="@+id/image_cover"
+                        tools:ignore="ContentDescription"
+                        tools:src="@drawable/default_avatar" />
 
                     <ImageView
-                        android:id="@+id/changeAvatar"
+                        android:id="@+id/img_change_avatar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@drawable/circler_border_with_background"
+                        android:foreground="?android:attr/selectableItemBackground"
                         android:padding="7dp"
                         android:src="@{@drawable/svg_photo_camera}"
-                        app:layout_constraintBottom_toBottomOf="@+id/avatarExpanded"
-                        app:layout_constraintEnd_toEndOf="@+id/avatarExpanded"
+                        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
+                        app:layout_constraintEnd_toEndOf="@+id/img_avatar"
                         app:layout_constraintHorizontal_bias="0.97"
-                        app:layout_constraintStart_toStartOf="@+id/avatarExpanded"
-                        app:layout_constraintTop_toTopOf="@+id/avatarExpanded"
-                        app:layout_constraintVertical_bias="0.97" />
+                        app:layout_constraintStart_toStartOf="@+id/img_avatar"
+                        app:layout_constraintTop_toTopOf="@+id/img_avatar"
+                        app:layout_constraintVertical_bias="0.97"
+                        tools:ignore="ContentDescription" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -193,30 +151,178 @@
         </com.google.android.material.appbar.AppBarLayout>
 
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/default_padding"
+            android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#d6d6d6"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            <TextView
+                android:id="@+id/tv_first_last_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:textIsSelectable="true"
+                tools:text="User Name" />
 
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <TextView
+                android:id="@+id/tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/xsmall_padding"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:paddingBottom="8dp"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:textIsSelectable="true"
+                tools:text="email@example.com"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:paddingBottom="@dimen/xsmall_padding"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:textIsSelectable="true"
+                tools:text="+3801100..."
+                tools:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:layout_marginBottom="8dp"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/themoviedb"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="User Name" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="8dp"
+                    android:singleLine="true"
+                    android:text="@string/username"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_user_name_movie"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:maxLines="1"
+                    android:textColor="@android:color/black"
+                    android:textIsSelectable="true"
+                    tools:text="User Name" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="8dp"
+                    android:singleLine="true"
+                    android:text="@string/request_token"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_request_token"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="8dp"
+                    android:textColor="@android:color/black"
+                    android:textIsSelectable="true"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="8dp"
+                    android:singleLine="true"
+                    android:text="@string/session_id"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_session_id"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="8dp"
+                    android:textColor="@android:color/black"
+                    android:textIsSelectable="true"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding"
+                android:autoLink="web"
+                android:includeFontPadding="false"
+                android:linksClickable="true"
+                android:maxLines="1"
+                android:paddingBottom="8dp"
+                android:singleLine="true"
+                android:text="@string/themoviedb_url"
+                android:textColor="@android:color/black"
+                android:textIsSelectable="true"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/titleCollapsed"
+            android:id="@+id/title_collapsed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="@{viewModel.userName}"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_anchor="@+id/appbar"
