--- a/app/src/main/res/layout/fragment_change_avatar.xml
+++ b/app/src/main/res/layout/fragment_change_avatar.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.android.template.ui.profile.avatar.viewmodel.ChangeAvatarViewModel" />
+            type="com.android.template.ui.avatar.viewmodel.ChangeImageViewModel" />
 
         <import type="android.view.View" />
     </data>
@@ -27,24 +27,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.isseiaoki.simplecropview.CropImageView
-                android:id="@+id/cropImageView"
+            <com.canhub.cropper.CropImageView
+                android:id="@+id/crop_image_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="16dp"
                 android:visibility="@{safeUnbox(!viewModel.isLoading()) ? View.VISIBLE : View.GONE}"
-                app:scv_crop_mode="circle"
-                app:scv_frame_color="@color/crop_grid_color"
-                app:scv_frame_stroke_weight="1dp"
-                app:scv_guide_color="@color/crop_grid_color"
-                app:scv_guide_show_mode="show_always"
-                app:scv_guide_stroke_weight="1dp"
-                app:scv_handle_color="@color/crop_grid_color"
-                app:scv_handle_show_mode="show_always"
-                app:scv_handle_size="7dp"
-                app:scv_min_frame_size="50dp"
-                app:scv_overlay_color="#55F0F0F0"
-                app:scv_touch_padding="8dp" />
+                app:cropBackgroundColor="#55F0F0F0"
+                app:cropBorderCornerColor="@color/crop_grid_color"
+                app:cropBorderLineColor="@color/crop_grid_color"
+                app:cropCornerCircleFillColor="@color/crop_grid_color"
+                app:cropFixAspectRatio="true"
+                app:cropGuidelinesColor="@color/crop_grid_color"
+                app:cropMinCropWindowHeight="50dp"
+                app:cropMinCropWindowWidth="50dp"
+                app:cropShape="oval"
+                app:cropTouchRadius="8dp" />
 
             <ProgressBar
                 android:layout_width="wrap_content"
