fix set user avatar method

--- a/app/src/main/res/layout/left_hand_menu_header.xml
+++ b/app/src/main/res/layout/left_hand_menu_header.xml
@@ -59,7 +59,7 @@
             android:layout_marginBottom="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImageUrl="@{viewModel.userAvatar}"
+            app:setUserImageUrl="@{viewModel.userAvatar}"
             tools:src="@drawable/default_avatar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
