--- a/app/src/main/res/layout/reset_password_enter_code.xml
+++ b/app/src/main/res/layout/reset_password_enter_code.xml
@@ -40,7 +40,7 @@
             app:itemHeight="@dimen/default_item_size"
             app:itemSpacing="@dimen/small_padding"
             app:itemWidth="@dimen/default_item_size"
-            app:lineColor="@color/green_approved_text"
+            app:lineColor="@color/colorPrimary"
             app:lineWidth="1dp"
             app:viewType="line" />
 
