--- a/app/src/main/res/layout/reset_password_enter_email.xml
+++ b/app/src/main/res/layout/reset_password_enter_email.xml
@@ -17,7 +17,7 @@
             android:paddingStart="@dimen/xlarge_padding"
             android:paddingEnd="@dimen/xlarge_padding"
             android:text="@string/reset_password_title"
-            android:textColor="@color/green_btn"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/large_text_size"
             android:textStyle="bold" />
 
@@ -28,7 +28,7 @@
             android:layout_marginTop="@dimen/xlarge_padding"
             android:hint="@string/email"
             app:boxBackgroundColor="@android:color/transparent"
-            app:hintTextColor="@color/green_btn">
+            app:hintTextColor="@color/colorPrimary">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_email"
@@ -38,7 +38,7 @@
                 android:inputType="textEmailAddress"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
-                android:singleLine="true"/>
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
