--- a/app/src/main/res/layout/reset_password_enter_password.xml
+++ b/app/src/main/res/layout/reset_password_enter_password.xml
@@ -18,7 +18,7 @@
             android:paddingStart="@dimen/xlarge_padding"
             android:paddingEnd="@dimen/xlarge_padding"
             android:text="@string/setup_new_password_hint"
-            android:textColor="@color/green_approved_text"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/large_text_size"
             android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
             android:layout_marginTop="@dimen/default_padding"
             android:hint="@string/password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:hintTextColor="@color/green_btn"
+            app:hintTextColor="@color/colorPrimary"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -51,7 +51,7 @@
             android:layout_marginTop="@dimen/default_padding"
             android:hint="@string/confirm_password"
             app:boxBackgroundColor="@android:color/transparent"
-            app:hintTextColor="@color/green_btn"
+            app:hintTextColor="@color/colorPrimary"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
