--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1CD981</color>
+    <color name="colorPrimary">#08A7B6</color>
     <color name="colorPrimaryDark">#059345</color>
     <color name="colorAccent">#D81B60</color>
 
@@ -41,7 +41,7 @@
     <color name="reject_red">#DC3131</color>
     <color name="green_btn">#0AB10A</color>
     <color name="background_dark_transparent">#551e272b</color>
-    <color name="separate_strip_color">#C4C4C4</color>
+    <color name="separate_strip_color">#E9E4E4</color>
     <color name="background_sub_layout">#F6F6F6</color>
     <color name="description_sub_text_color">#696969</color>
     <color name="stroke_color_light">#D8D8D8</color>
