--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,7 +60,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="Widget"/>
+    <style name="Widget" />
 
     <style name="Widget.ProgressBar">
         <item name="android:indeterminateOnly">true</item>
@@ -127,6 +127,10 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:maxLines">5</item>
         <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="Theme.NoSplash" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
 </resources>
